K8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-dep
  labels:
    name: canary-dep
