K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1-deployment
  namespace: canary-dep
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
        - name: promo-timer
          image: kartiknaik/promo-timer:v1.1
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2-deployment
  namespace: canary-dep
  labels:
    app: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
        - name: promo-timer
          image: kartiknaik/promo-timer:v2
          ports:
            - containerPort: 80
