K8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: v1-service
  namespace: canary-dep     
spec:
  selector:
    app: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort


---

apiVersion: v1
kind: Service
metadata:
  name: v2-service
  namespace: canary-dep
spec:
  selector:
    app: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
